--- a/backend/java/src/main/resources/application.properties
+++ b/backend/java/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.datasource.url=jdbc:sqlite:database/greenreach.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.database-platform=org.sqlite.hibernate.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
+
+mqtt.broker=tcp://localhost:1883
+mqtt.clientId=greenreach-backend
+mqtt.username=esp32rack
+mqtt.password=yourpassword
+
