--- a/backend/java/src/main/resources/application.properties
+++ b/backend/java/src/main/resources/application.properties
@@ -1,10 +1,35 @@
+# -----------------------------------------------------------------------------
+# Datasource (SQLite)
+# -----------------------------------------------------------------------------
 spring.datasource.url=jdbc:sqlite:database/greenreach.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
-spring.jpa.database-platform=org.sqlite.hibernate.dialect.SQLiteDialect
-spring.jpa.hibernate.ddl-auto=update
 
+# Hibernate dialect for SQLite
+spring.jpa.database-platform=org.sqlite.hibernate.dialect.SQLiteDialect
+
+# -----------------------------------------------------------------------------
+# Schema generation
+# -----------------------------------------------------------------------------
+# Automatically create the schema (tables) on startup.
+# Warning: this will drop and recreate the schema each time the app starts!
+spring.jpa.hibernate.ddl-auto=create
+
+# (Optional) Show SQL and formatting for debugging
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+
+# -----------------------------------------------------------------------------
+# Server binding
+# -----------------------------------------------------------------------------
+# Listen on all network interfaces so you can hit the API from other devices
+server.address=0.0.0.0
+server.port=8080
+
+# -----------------------------------------------------------------------------
+# MQTT Settings
+# -----------------------------------------------------------------------------
 mqtt.broker=tcp://localhost:1883
 mqtt.clientId=greenreach-backend
 mqtt.username=esp32rack
 mqtt.password=yourpassword
-
