--- a/backend/java/src/main/resources/application.properties
+++ b/backend/java/src/main/resources/application.properties
@@ -18,6 +18,8 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
+logging.file.name=logs/switchbot.log
+logging.level.com.greenreach=INFO
 
 # -----------------------------------------------------------------------------
 # Server binding
